# AI-Tutor

./: .env.example  .gitignore  Dockerfile  PROJECT_MAP.md  audit_rag.py  docker-compose.yml  extract_tasks.py  ingest.py  main.py  pyproject.toml
benchmarks/: benchmark_fallback.py  benchmark_rag.py  benchmark_system.py  llm_judge.py
bot/: README.md  __init__.py  access_control.py  admin_controls.py  admin_db.py  config.py  course_sessions.py  disciplines.py  formatting.py  graph_runner.py  lesson_export.py  levels.py  progress.py  remote_ops.py  system_checks.py  telegram_text.py  topic_web_search.py
bot/agents/: __init__.py  content_agent.py  evaluator.py  generation_utils.py  graph.py  input_validation.py  llm.py  orchestrator.py  planner_agent.py  profile_agent.py  qa_agent.py  quiz_agent.py  response_cleanup.py  state.py
bot/db/: __init__.py
bot/handlers/: __init__.py  callbacks.py  commands.py  messages.py  ui.py
bot/maintenance/: __init__.py  normalize_progress_plans.py
bot/practice/: __init__.py  extractor.py
bot/rag/: __init__.py  chunker.py  ingest.py  pdf_audit.py  search.py
data/: README.md
docs/: architecture.html  user-guide.html
researches/: judge_cache.json  research_benchmark.ipynb  research_rag_benchmark.ipynb  research_system_benchmark.ipynb  results.json  system_bench_gen.json  system_bench_judge.json  system_bench_results.json
