[project]
name = "ai-tutor-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[job-queue]>=20.0",
    "langgraph>=0.2",
    "langchain-google-genai>=1.0",
    "qdrant-client>=1.9",
    "pymupdf>=1.24",
    "python-dotenv>=1.0",
    "openrouter>=0.8.1",
    "google-generativeai>=0.7",
    "google-genai>=1.73.1",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "sentence-transformers>=5.4.1",
    "rank-bm25>=0.2.2",
    "pymorphy3>=2.0.6",
    "ipykernel>=7.2.0",
    "python-docx>=1.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "seaborn>=0.13.2",
]
